@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_config.c,v 1.139 2007-10-17 22:04:49 chu11 Exp $
+ *  $Id: cerebrod_config.c,v 1.140 2007-10-18 22:32:27 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2005-2007 The Regents of the University of California.
@@ -133,6 +133,7 @@ _cerebrod_set_config_default(void)
   conf.metric_controller_debug = CEREBROD_METRIC_CONTROLLER_DEBUG_DEFAULT;
   conf.metric_server_debug = CEREBROD_METRIC_SERVER_DEBUG_DEFAULT;
   conf.event_server_debug = CEREBROD_EVENT_SERVER_DEBUG_DEFAULT;
+  conf.alternate_hostname = CEREBROD_ALTERNATE_HOSTNAME;
 #endif /* CEREBRO_DEBUG */
 }
 
@@ -415,6 +416,8 @@ _cerebrod_load_config(void)
     conf.metric_server_debug = tconf.cerebrod_metric_server_debug;
   if (tconf.cerebrod_event_server_debug_flag)
     conf.event_server_debug = tconf.cerebrod_event_server_debug;
+  if (tconf.cerebrod_alternate_hostname_flag)
+    conf.alternate_hostname = Strdup(tconf.cerebrod_alternate_hostname);
 #endif /* CEREBRO_DEBUG */
 }
 
@@ -1170,6 +1173,7 @@ _cerebrod_config_dump(void)
   fprintf(stderr, "* metric_controller_debug: %d\n", conf.metric_controller_debug);
   fprintf(stderr, "* metric_server_debug: %d\n", conf.metric_server_debug);
   fprintf(stderr, "* event_server_debug: %d\n", conf.event_server_debug);
+  fprintf(stderr, "* alternate_hostname: %s\n", conf.alternate_hostname);
   fprintf(stderr, "* -------------------------------\n");
   fprintf(stderr, "* Calculated Configuration\n");
   fprintf(stderr, "* -------------------------------\n");
